fix nav style on mobile

--- a/source/css/navbar.scss
+++ b/source/css/navbar.scss
@@ -55,11 +55,20 @@
   }
 }
 
-@media (max-width: 600px) {
-  .avatar {
-    display: none;
-  }
+@media (max-width: 700px) {
   .links {
     display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .avatar,
+  .info,
+  .links {
+    display: none;
+  }
+
+  .menu {
+    margin-left: 0 !important;
   }
 }
